--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,4 @@
-version: '1.1'
+version: '1.2'
 
 services:
   db:
@@ -61,11 +61,12 @@ services:
         # Allocate sufficient memory (adjust as needed, 1GB is a good minimum for local dev)
         ES_JAVA_OPTS: "-Xms512m -Xmx512m"
         # Other necessary settings, security is enabled by default from version 8.0+
-        # ELASTIC_SECURITY_ENABLED: "true" # This is default behavior for v8+
+        ELASTIC_SECURITY_ENABLED: "false" # This is default behavior for v8+
+        xpack.security.enabled: false
       volumes:
         - esdata:/usr/share/elasticsearch/data # Persist data outside the container
       healthcheck:
-        test: [ "CMD", "curl", "--silent", "--fail", "https://localhost:9200/_cluster/health?local=true" ]
+        test: [ "CMD", "curl", "--silent", "--fail", "http://localhost:9200/_cluster/health?local=true" ]
         interval: 10s
         timeout: 10s
         retries: 10
@@ -76,7 +77,9 @@ services:
       ports:
         - "5601:5601"
       environment:
-        ELASTICSEARCH_HOSTS: '["https://elasticsearch:9200"]' # Use the service name defined above
+        ELASTICSEARCH_HOSTS: '["http://elasticsearch:9200"]' # Use the service name defined above
+      depends_on:
+        - elasticsearch
 volumes:
   postgres_data:
   esdata: # Define the named volume
